--- a/Game/game.css
+++ b/Game/game.css
@@ -1,42 +1,115 @@
 *{
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
-}
-.game{
-    width: 500px;
-    height: 200px;
-    border: 1px solid black;
-    margin: auto;
-}
-#character{
-    width: 20px;
-    height: 50px;
-    background-color: red;
-    position:relative;
-    top: 150px;
-}
-.animate{
-    animation: jump 0.3s linear;
-}
-@keyframes jump{
-    0%{top: 150px;}
-    30%{top: 100px;}
-    70%{top: 100px;}
-    100%{top: 150px;}
+    overflow-x: show;
 }
 
-#block{
-    background-color: blue;
-    width: 20px;
-    height: 20px;
+.game{
+    width: 90%;
+    height: 70vh;
+    border: 1px solid black;
+    margin: auto;
     position: relative;
-    top: 130px;
-    left: 500px;
-    animation: block 1s infinite linear;
 }
+
+#ground {
+    width: 100%;
+    background-color: #024601;
+    height: 50px;
+    
+    position: absolute;
+    bottom: 0px;
+}
+#background {
+    width: 100%;
+    background-color: #024601;
+    height: 60%;
+    
+    background-repeat: repeat-x;
+    background-image: url("./treeBackground.png");
+    
+    position: absolute;
+    bottom: 50px;
+}
+
+#treetops {
+    width: 100%;
+    background-color: #024601;
+    height: 60%;
+    
+    background-repeat: repeat-x;
+    background-image: url("./treeTops.png");
+    
+    position: absolute;
+    bottom: 40%;
+}
+
+.character{
+    width: 100px;
+    height: 40%;
+    background-color: red;
+    position: absolute;
+    bottom: 50px;
+    left: 0px;
+}
+#character img {
+    display: none;
+}
+#character img:first-child {
+    display: block;
+}
+.charImg{
+    position: relative;
+    height: 100%;
+}
+
+.jump{
+    animation: jump 1s linear;
+}
+@keyframes jump{
+    0%{bottom: 50px;}
+    30%{bottom: 30%;}
+    60%{bottom: 30%;}
+    90%{bottom: 50px;}
+}
+
+.duck{
+    animation: duck 1s linear;
+}
+@keyframes duck{
+    0%  {height: 150px; width: 50px; }
+    1%  {height: 15%; width: 150px;}
+    99% {height: 15%; width: 150px;}
+    100%{height: 150px; width: 50px;}
+}
+
+
+.block{
+    background-color: blue;
+    height: 20%;
+    aspect-ratio: 1 / 1;
+    position: absolute;
+    bottom: 50px;
+    left: 10px;
+    animation: block 5s linear;
+    
+    
+    background-repeat: no-repeat;
+    background-size: contain;
+    /*background-image: url("TestingBottom.png");*/
+}
+.Stalactite{
+    bottom: 40%;
+    height: 40%;
+    aspect-ratio: 1 / 1.5;
+}
+.Stalagmite{
+    bottom: 23px;
+    background-image: url("logA.png");
+}
+
 @keyframes block{
-    0%{left: 500px}
+    0%{left: 100%}
     100%{left: -20px}
 }
 p{
