--- a/Game/game.css
+++ b/Game/game.css
@@ -96,10 +96,17 @@
     background-repeat: no-repeat;
     background-size: contain;
 }
+.StalactiteWrapper{
+    bottom:50px;
+    height:inherit;
+}
 .Stalactite{
     bottom: 40%;
     height: 40%;
-    aspect-ratio: 1 / 5;
+    aspect-ratio: 1 / 2;
+    
+    background-size:contain;
+    background-image: url("VineA.png");
 }
 .Stalagmite{
     bottom: 23px;
